--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <script src="p5/p5.min.js"></script>
     <script src="sketch.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>P5.js Project</title>
   </head>
   <body>
