--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="p5/p5.min.js"></script>
+    <script src="helpers/coordinateFunctions.js"></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="styles.css">
     <title>P5.js Project</title>
