--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <script src="p5/p5.min.js"></script>
-    <script src="helpers/coordinateFunctions.js"></script>
+    <script src="helpers/coordinates.js"></script>
+    <script src="helpers/spiral.js"></script>
+    <script src="helpers/canvas.js"></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="styles.css">
     <title>P5.js Project</title>
