--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <script src="p5/p5.min.js"></script>
     <script src="helpers/coordinates.js"></script>
-    <script src="helpers/spiral.js"></script>
+    <script src="draw/spiral.js"></script>
+    <script src="draw/hearts.js"></script>
     <script src="helpers/canvas.js"></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="styles.css">
