--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="p5/p5.min.js"></script>
-    <script src="helpers/coordinates.js"></script>
+    <script src="helpers/coordinateTransformations.js"></script>
     <script src="draw/spiral.js"></script>
     <script src="draw/hearts.js"></script>
     <script src="helpers/canvas.js"></script>
