--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="p5/p5.min.js"></script>
     <script src="helpers/coordinateTransformations.js"></script>
     <script src="draw/spiral.js"></script>
+    <script src="draw/circle.js"></script>
     <script src="draw/hearts.js"></script>
     <script src="helpers/canvas.js"></script>
     <script src="sketch.js"></script>
