draw 5 random points with radius, theta

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <script src="p5/p5.min.js"></script>
     <script src="helpers/canvas.js"></script>
+    <script src="helpers/drawing.js"></script>
+    <script src="helpers/coordinateTransformations.js"></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="styles.css">
     <title>P5.js Project</title>
