spiral setup for class

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script src="p5/p5.min.js"></script>
     <script src="helpers/coordinateTransformer.js"></script>
     <script src="helpers/canvasManager.js"></script>
-    <script src="drawings/spiral.js"></script>
+    <script src="drawings/spiral.js" defer></script>
     <script src="drawings/circle.js"></script>
     <script src="drawings/hearts.js"></script>
     <script src="sketch.js"></script>
@@ -12,6 +12,7 @@
   </head>
   <body>
     <main>
+      <div id="scrolling">Scrolled By: <span id="scroll-value">0</span> pixels</div>
     </main>
   </body>
 </html>
