finish refactoring with spiral at top

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <script src="helpers/canvasManager.js"></script>
     <script src="drawings/spiral.js" defer></script>
     <script src="drawings/circle.js"></script>
-    <script src="drawings/hearts.js"></script>
+    <script src="drawings/heart.js"></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="styles.css">
     <title>P5.js Project</title>
   </head>
   <body>
     <main>
-      <!-- <div id="scrolling">Scrolled By: <span id="scroll-value">0</span> pixels</div> -->
+      <div id="scrolling">Scrolled By: <span id="scroll-value">0</span> pixels</div>
     </main>
   </body>
 </html>
