--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <main>
-      <div id="scrolling">Scrolled By: <span id="scroll-value">0</span> pixels</div>
+      <div id="scrolling">Spiral Rotated By: <span id="scroll-value">0</span> degrees</div>
     </main>
   </body>
 </html>
