show heart offset as well as spiral offset

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <script src="helpers/canvasManager.js"></script>
     <script src="drawings/spiral.js" defer></script>
     <script src="drawings/circle.js"></script>
-    <script src="drawings/heart.js"></script>
+    <script src="drawings/heart.js" defer></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="styles.css">
     <title>P5.js Project</title>
   </head>
   <body>
     <main>
-      <div id="scrolling">Spiral Rotated By: <span id="scroll-value">0</span> degrees</div>
+      <div>Spiral Rotated By: <span id="spiral-rotation-value">0</span> degrees</div>
+      <div>Heart Offsetted By: <span id="heart-offset-value">0</span> pixels</div>
     </main>
   </body>
 </html>
