--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
   <head>
     <script src="p5/p5.min.js"></script>
     <script src="helpers/coordinateTransformer.js"></script>
-    <script src="helpers/canvasManager.js"></script>
+    <script src="helpers/canvasManager.js" defer></script>
     <script src="drawings/spiral.js" defer></script>
     <script src="drawings/circle.js"></script>
     <script src="drawings/heart.js" defer></script>
     <script src="sketch.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>P5.js Project</title>
   </head>
   <body>
     <main>
-      <div>Spiral Rotated By: <span id="spiral-rotation-value">0</span> degrees</div>
-      <div>Heart Offsetted By: <span id="heart-offset-value">0</span> pixels</div>
+      <div>
+        Spiral Rotated By: <span id="spiral-rotation-value">0</span> degrees
+      </div>
+      <div>
+        Heart Offsetted By: <span id="heart-offset-value">0</span> pixels
+      </div>
+      <div><button id="new-color-button">New Color</button></div>
     </main>
   </body>
 </html>
