--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
     <script src="drawings/heart.js" defer></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style/navbar.css" />
     <title>P5.js Project</title>
   </head>
   <body>
+    <div id="nav-container">
+      <div id="nav-bar">
+        <nav>
+          <ul>
+            <li><a href="page/circle.html">Circle</a></li>
+            <li><a href="page/heart.html">Heart</a></li>
+            <li><a href="page/spiral.html">Spiral</a></li>
+          </ul>
+        </nav>
+        <hr />
+      </div>
+    </div>
     <main>
       <div>
         Spiral Rotated By: <span id="spiral-rotation-value">0</span> degrees
