navbar with home and working

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       <div id="nav-bar">
         <nav>
           <ul>
-            <li><a href="page/circle.html">Circle</a></li>
-            <li><a href="page/heart.html">Heart</a></li>
-            <li><a href="page/spiral.html">Spiral</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="shapes/circle.html">Circle</a></li>
+            <li><a href="shapes/heart.html">Heart</a></li>
+            <li><a href="shapes/spiral.html">Spiral</a></li>
           </ul>
         </nav>
         <hr />
