--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
     <title>P5.js Project</title>
   </head>
   <body>
+    <!-- nav container so it's hideable -->
     <div id="nav-container">
-      <div id="nav-bar">
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="shapes/circle.html">Circle</a></li>
-            <li><a href="shapes/heart.html">Heart</a></li>
-            <li><a href="shapes/spiral.html">Spiral</a></li>
-          </ul>
-        </nav>
+      <!-- actual nav bar -->
+      <nav id="nav-bar">
+        <!-- navigation bar items -->
+        <ul>
+          <li id="current-page"><a href="index.html">Home</a></li>
+          <li><a href="shapes/circle.html">Circle</a></li>
+          <li><a href="shapes/heart.html">Heart</a></li>
+          <li><a href="shapes/spiral.html">Spiral</a></li>
+        </ul>
+        <!-- hr at bottom -->
         <hr />
-      </div>
+      </nav>
     </div>
+
+    <!-- main -->
     <main>
       <div>
         Spiral Rotated By: <span id="spiral-rotation-value">0</span> degrees
