--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
           <li><a href="shapes/circle.html">Circle</a></li>
           <li><a href="shapes/heart.html">Heart</a></li>
           <li><a href="shapes/spiral.html">Spiral</a></li>
+
+          <!-- to be continued style -->
+          <li id="last-navbar-item">And more to come...</li>
         </ul>
         <!-- hr at bottom -->
         <hr />
