--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html>
   <head>
-    <script src="p5/p5.min.js"></script>
-    <script src="helpers/coordinateTransformer.js"></script>
-    <script src="helpers/canvasManager.js" defer></script>
-    <script src="drawings/spiral.js" defer></script>
-    <script src="drawings/circle.js"></script>
-    <script src="drawings/heart.js" defer></script>
-    <script src="sketch.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="style/navbar.css" />
+    <link rel="stylesheet" href="style/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <title>P5.js Project</title>
   </head>
   <body>
@@ -33,13 +31,8 @@
 
     <!-- main -->
     <main>
-      <div>
-        Spiral Rotated By: <span id="spiral-rotation-value">0</span> degrees
-      </div>
-      <div>
-        Heart Offsetted By: <span id="heart-offset-value">0</span> pixels
-      </div>
-      <div><button id="new-color-button">New Color</button></div>
+      <span id="material-symbols-outlined" class="material-symbols-outlined"> arrow_upward </span>
+      Hover at top to open navigation bar
     </main>
   </body>
 </html>
