--- a/shapes/spiral.html
+++ b/shapes/spiral.html
@@ -6,7 +6,7 @@
     <script src="../drawings/spiral.js" defer></script>
     <script src="../drawings/circle.js"></script>
     <script src="../drawings/heart.js" defer></script>
-    <script src="../sketch.js"></script>
+    <script src="../sketch.js" defer></script>
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
     <title>P5.js Project</title>
