comment html for each shape

--- a/shapes/heart.html
+++ b/shapes/heart.html
@@ -1,12 +1,15 @@
 <html>
   <head>
+    <!-- p5js -->
     <script src="../p5/p5.min.js"></script>
+    <!-- helper functions -->
     <script src="../helpers/coordinateTransformer.js"></script>
     <script src="../helpers/canvasManager.js" defer></script>
-    <script src="../drawings/spiral.js" defer></script>
-    <script src="../drawings/circle.js"></script>
+    <!-- heart drawing -->
     <script src="../drawings/heart.js" defer></script>
+    <!-- sketch -->
     <script src="../sketch.js" defer></script>
+    <!-- css -->
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
     <title>P5.js Project</title>
