--- a/shapes/spiral.html
+++ b/shapes/spiral.html
@@ -1,19 +1,22 @@
 <html>
   <head>
+    <!-- p5js -->
     <script src="../p5/p5.min.js"></script>
+    <!-- helper functions -->
     <script src="../helpers/coordinateTransformer.js"></script>
     <script src="../helpers/canvasManager.js" defer></script>
+    <!-- spiral drawing -->
     <script src="../drawings/spiral.js" defer></script>
-    <script src="../drawings/circle.js"></script>
-    <script src="../drawings/heart.js" defer></script>
+    <!-- sketch -->
     <script src="../sketch.js" defer></script>
+    <!-- css -->
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
     <title>P5.js Project</title>
   </head>
   <body>
-     <!-- nav container so it's hideable -->
-     <div id="nav-container">
+    <!-- nav container so it's hideable -->
+    <div id="nav-container">
       <!-- actual nav bar -->
       <nav id="nav-bar">
         <!-- navigation bar items -->
