--- a/shapes/heart.html
+++ b/shapes/heart.html
@@ -12,11 +12,12 @@
     <!-- css -->
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
+    <link rel="stylesheet" href="../style/shapes.css" />
     <title>P5.js Project</title>
   </head>
   <body>
-     <!-- nav container so it's hideable -->
-     <div id="nav-container">
+    <!-- nav container so it's hideable -->
+    <div id="nav-container">
       <!-- actual nav bar -->
       <nav id="nav-bar">
         <!-- navigation bar items -->
@@ -33,13 +34,18 @@
 
     <!-- main -->
     <main>
-      <div>
-        Spiral Rotated By: <span id="spiral-rotation-value">0</span> degrees
+      <!-- title of shape -->
+      <div id="shape-title">Growing Heart</div>
+
+      <!-- shape information container and color changing -->
+      <div id="shape-info-container">
+        <div class="shape-info-element">
+          Heart Offsetted By: <span id="heart-offset-value">0</span> pixels
+        </div>
+        <div class="shape-info-element">
+          <button id="new-color-button">New Color</button>
+        </div>
       </div>
-      <div>
-        Heart Offsetted By: <span id="heart-offset-value">0</span> pixels
-      </div>
-      <div><button id="new-color-button">New Color</button></div>
     </main>
   </body>
 </html>
