--- a/shapes/heart.html
+++ b/shapes/heart.html
@@ -10,7 +10,7 @@
     <!-- sketch -->
     <script src="../sketch.js" defer></script>
     <!-- css -->
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../style/shared.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
     <link rel="stylesheet" href="../style/shapes.css" />
     <title>P5.js Project</title>
