--- a/shapes/circle.html
+++ b/shapes/circle.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <!-- p5js -->
-    <script src="../p5/p5.min.js"></script>
+    <script src="../js/p5/p5.min.js"></script>
     <!-- helper functions -->
-    <script src="../helpers/coordinateTransformer.js"></script>
-    <script src="../helpers/canvasManager.js" defer></script>
+    <script src="../js/helpers/coordinateTransformer.js"></script>
+    <script src="../js/helpers/canvasManager.js" defer></script>
     <!-- circle drawing -->
-    <script src="../drawings/circle.js"></script>
+    <script src="../js/drawings/circle.js"></script>
     <!-- sketch -->
-    <script src="../sketch.js" defer></script>
+    <script src="../js/sketch.js" defer></script>
     <!-- css -->
     <link rel="stylesheet" href="../style/shared.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
