add to be continued to all navbar

--- a/shapes/spiral.html
+++ b/shapes/spiral.html
@@ -26,6 +26,8 @@
           <li><a href="circle.html">Circle</a></li>
           <li><a href="heart.html">Heart</a></li>
           <li id="current-page"><a href="spiral.html">Spiral</a></li>
+          <!-- to be continued style -->
+          <li id="last-navbar-item">And more to come...</li>
         </ul>
         <!-- hr at bottom -->
         <hr />
