--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <title>P5.js Project</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <title>Polar Coordinates</title>
   </head>
   <body>
     <!-- nav container so it's hideable -->
