--- a/shapes/spiral.html
+++ b/shapes/spiral.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="../style/shared.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
     <link rel="stylesheet" href="../style/shapes.css" />
-    <title>P5.js Project</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <title>Scrollable Spiral</title>
   </head>
   <body>
     <!-- nav container so it's hideable -->
