add favicon for real

--- a/shapes/heart.html
+++ b/shapes/heart.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../style/shared.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
     <link rel="stylesheet" href="../style/shapes.css" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico?v=2">
     <title>Growing Heart</title>
   </head>
   <body>
