add disappearing message

--- a/shapes/spiral.html
+++ b/shapes/spiral.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../style/shared.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
     <link rel="stylesheet" href="../style/shapes.css" />
+    <link rel="stylesheet" href="../style/spiral.css" />
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico?v=2">
     <title>Scrollable Spiral</title>
   </head>
@@ -52,6 +53,9 @@
           <button id="toggle-noise-button">Add Noise</button>
         </div>
       </div>
+      <div id="scrolling-message-container">
+      <div id="scrolling-message">Try Scrolling</div>
+    </div>
     </main>
   </body>
 </html>
