navbar appear and disappear smoothly

--- a/shapes/circle.html
+++ b/shapes/circle.html
@@ -9,6 +9,7 @@
     <script src="../js/drawings/circle.js"></script>
     <!-- sketch -->
     <script src="../js/sketch.js" defer></script>
+    <script src="../js/shared.js" defer></script>
     <!-- css -->
     <link rel="stylesheet" href="../style/shared.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
