generalize navbar appearance styles

--- a/shapes/circle.html
+++ b/shapes/circle.html
@@ -13,6 +13,7 @@
     <!-- css -->
     <link rel="stylesheet" href="../style/shared.css" />
     <link rel="stylesheet" href="../style/navbar.css" />
+    <link rel="stylesheet" href="../style/animations.css" />
     <link rel="stylesheet" href="../style/shapes.css" />
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico?v=2">
     <title>Static Circle</title>
