--- a/shapes/heart.html
+++ b/shapes/heart.html
@@ -14,7 +14,8 @@
   <!-- css -->
   <link rel="stylesheet" href="../style/shared.css" />
   <link rel="stylesheet" href="../style/navbar.css" />
-  <link rel="stylesheet" href="../style/shapes.css" />
+    <link rel="stylesheet" href="../style/animations.css" />
+    <link rel="stylesheet" href="../style/shapes.css" />
   <link rel="icon" type="image/x-icon" href="../images/favicon.ico?v=2">
   <title>Growing Heart</title>
 </head>
