--- a/shapes/spiral.html
+++ b/shapes/spiral.html
@@ -15,7 +15,8 @@
   <link rel="stylesheet" href="../style/shared.css" />
   <link rel="stylesheet" href="../style/navbar.css" />
   <link rel="stylesheet" href="../style/shapes.css" />
-  <link rel="stylesheet" href="../style/spiral.css" />
+    <link rel="stylesheet" href="../style/animations.css" />
+    <link rel="stylesheet" href="../style/spiral.css" />
   <link rel="icon" type="image/x-icon" href="../images/favicon.ico?v=2">
   <title>Scrollable Spiral</title>
 </head>
