--- a/shapes/circle.html
+++ b/shapes/circle.html
@@ -1,56 +1,69 @@
 <html>
-  <head>
-    <!-- p5js -->
-    <script src="../js/p5/p5.min.js"></script>
-    <!-- helper functions -->
-    <script src="../js/helpers/coordinateTransformer.js"></script>
-    <script src="../js/helpers/canvasManager.js" defer></script>
-    <!-- circle drawing -->
-    <script src="../js/drawings/circle.js"></script>
-    <!-- sketch -->
-    <script src="../js/sketch.js" defer></script>
-    <script src="../js/shared.js" defer></script>
-    <!-- css -->
-    <link rel="stylesheet" href="../style/shared.css" />
-    <link rel="stylesheet" href="../style/navbar.css" />
-    <link rel="stylesheet" href="../style/animations.css" />
-    <link rel="stylesheet" href="../style/shapes.css" />
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico?v=2">
-    <title>Static Circle</title>
-  </head>
-  <body>
-    <!-- nav container so it's hideable -->
-    <div id="nav-container">
 
-      
-      <!-- title of shape -->
-      <div id="shape-title">Static Circle</div>
+<head>
+  <!-- page icon -->
+  <link rel="icon" type="image/x-icon" href="../images/favicon.ico?v=2">
 
-      <!-- actual nav bar -->
-      <nav id="nav-bar">
-        <!-- navigation bar items -->
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li id="current-page"><a href="circle.html">Circle</a></li>
-          <li><a href="heart.html">Heart</a></li>
-          <li><a href="spiral.html">Spiral</a></li>
-          <!-- to be continued style -->
-          <li id="last-navbar-item">And more to come...</li>
-        </ul>
-        <!-- hr at bottom -->
-        <hr />
-      </nav>
+  <!-- ========== CSS ========== -->
+  <!-- body, html, *, fonts... -->
+  <link rel="stylesheet" href="../style/base.css" />
+  <!-- navbar style -->
+  <link rel="stylesheet" href="../style/navbar.css" />
+  <!-- animations that are toggled through js -->
+  <link rel="stylesheet" href="../style/animations.css" />
+  <!-- style that's only used in shape page -->
+  <link rel="stylesheet" href="../style/shapes.css" />
 
-    </div>
+  <!-- ========== JS ========== -->
+  <!-- all pages shared JavaScript -->
+  <script src="../js/shared.js" defer></script>
+  <!-- p5js -->
+  <script src="../js/p5/p5.min.js"></script>
+  <!-- helper functions -->
+  <script src="../js/helpers/coordinateTransformer.js"></script>
+  <script src="../js/helpers/canvasManager.js" defer></script>
+  <!-- circle drawing -->
+  <script src="../js/drawings/circle.js" defer></script>
+  <!-- sketch -->
+  <script src="../js/sketch.js" defer></script>
 
-    <!--  -->
-    <main>
-      <!-- shape information container and color changing -->
-      <div id="shape-info-container">
-        <div class="shape-info-element">
-          <button id="new-color-button">New Color</button>
-        </div>
+  <title>Static Circle</title>
+</head>
+
+<body>
+  <!-- nav container so it's hideable -->
+  <div id="nav-container">
+
+
+    <!-- title of shape -->
+    <div id="shape-title">Static Circle</div>
+
+    <!-- actual nav bar -->
+    <nav id="nav-bar">
+      <!-- navigation bar items -->
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li id="current-page"><a href="circle.html">Circle</a></li>
+        <li><a href="heart.html">Heart</a></li>
+        <li><a href="spiral.html">Spiral</a></li>
+        <!-- to be continued style -->
+        <li id="last-navbar-item">And more to come...</li>
+      </ul>
+      <!-- hr at bottom -->
+      <hr />
+    </nav>
+
+  </div>
+
+  <!--  -->
+  <main>
+    <!-- shape information container and color changing -->
+    <div id="shape-info-container">
+      <div class="shape-info-element">
+        <button id="new-color-button">New Color</button>
       </div>
-    </main>
-  </body>
+    </div>
+  </main>
+</body>
+
 </html>
