--- a/shapes/heart.html
+++ b/shapes/heart.html
@@ -1,6 +1,22 @@
 <html>
 
 <head>
+  <!-- page icon -->
+  <link rel="icon" type="image/x-icon" href="../images/favicon.ico?v=2">
+
+  <!-- ========== CSS ========== -->
+  <!-- body, html, *, fonts... -->
+  <link rel="stylesheet" href="../style/base.css" />
+  <!-- navbar style -->
+  <link rel="stylesheet" href="../style/navbar.css" />
+  <!-- animations that are toggled through js -->
+  <link rel="stylesheet" href="../style/animations.css" />
+  <!-- style that's only used in shape page -->
+  <link rel="stylesheet" href="../style/shapes.css" />
+
+  <!-- ========== JS ========== -->
+  <!-- all pages shared JavaScript -->
+  <script src="../js/shared.js" defer></script>
   <!-- p5js -->
   <script src="../js/p5/p5.min.js"></script>
   <!-- helper functions -->
@@ -10,13 +26,7 @@
   <script src="../js/drawings/heart.js" defer></script>
   <!-- sketch -->
   <script src="../js/sketch.js" defer></script>
-  <script src="../js/shared.js" defer></script>
-  <!-- css -->
-  <link rel="stylesheet" href="../style/shared.css" />
-  <link rel="stylesheet" href="../style/navbar.css" />
-    <link rel="stylesheet" href="../style/animations.css" />
-    <link rel="stylesheet" href="../style/shapes.css" />
-  <link rel="icon" type="image/x-icon" href="../images/favicon.ico?v=2">
+
   <title>Growing Heart</title>
 </head>
 
