refactor index htmls

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <!-- nav container so it's hideable -->
+  <!-- nav container so navbar iss hideable -->
   <div id="nav-container">
     <nav id="nav-bar">
       <!-- navigation bar items -->
