move hint style to a generic hints css file

--- a/shapes/spiral.html
+++ b/shapes/spiral.html
@@ -11,10 +11,10 @@
   <link rel="stylesheet" href="../style/navbar.css" />
   <!-- animations that are toggled through js -->
   <link rel="stylesheet" href="../style/animations.css" />
+  <!-- hint specific style -->
+  <link rel="stylesheet" href="../style/hints.css" />
   <!-- style that's only used in shape page -->
   <link rel="stylesheet" href="../style/shapes.css" />
-  <!-- spiral specific style -->
-  <link rel="stylesheet" href="../style/spiral.css" />
 
   <!-- ========== JS ========== -->
   <!-- all pages shared JavaScript -->
@@ -57,8 +57,8 @@
   <!-- main - contains shape hint and shape info as well as canvas placed by p5.js libraries -->
   <main>
     <!-- shape hint - will appear if user has not scrolled after a while -->
-    <div id="scrolling-message-container">
-      <div id="scrolling-message">Try Scrolling</div>
+    <div id="hint-container-container">
+      <div id="hint-container">Try Scrolling</div>
     </div>
 
     <!-- shape information container -->
