Maurer Rose linked to page

--- a/shapes/circle.html
+++ b/shapes/circle.html
@@ -44,6 +44,7 @@
         <li id="current-page"><a href="circle.html">Circle</a></li>
         <li><a href="heart.html">Heart</a></li>
         <li><a href="spiral.html">Spiral</a></li>
+        <li><a href="rose.html">Maurer Rose</a></li>
 
         <!-- to be continued special element -->
         <li id="last-navbar-item">And more to come...</li>
