--- a/shapes/rose.html
+++ b/shapes/rose.html
@@ -44,7 +44,7 @@
         <li><a href="circle.html">Circle</a></li>
         <li><a href="heart.html">Heart</a></li>
         <li><a href="spiral.html">Spiral</a></li>
-        <li id="current-page"><a href="maurer.html">Maurer Rose</a></li>
+        <li id="current-page"><a href="rose.html">Maurer Rose</a></li>
 
         <!-- to be continued special element -->
         <li id="last-navbar-item">And more to come...</li>
