--- a/shapes/spiral.html
+++ b/shapes/spiral.html
@@ -46,6 +46,7 @@
         <li><a href="circle.html">Circle</a></li>
         <li><a href="heart.html">Heart</a></li>
         <li id="current-page"><a href="spiral.html">Spiral</a></li>
+        <li><a href="rose.html">Maurer Rose</a></li>
 
         <!-- to be continued special element -->
         <li id="last-navbar-item">And more to come...</li>
