--- a/shapes/rose.html
+++ b/shapes/rose.html
@@ -1,65 +1,66 @@
 <html>
+  <head>
+    <!-- page icon -->
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico?v=2" />
 
-<head>
-  <!-- page icon -->
-  <link rel="icon" type="image/x-icon" href="../images/favicon.ico?v=2">
+    <!-- ========== CSS ========== -->
+    <!-- body, html, *, fonts... -->
+    <link rel="stylesheet" href="../style/base.css" />
+    <!-- navbar style -->
+    <link rel="stylesheet" href="../style/navbar.css" />
+    <!-- animations that are toggled through js -->
+    <link rel="stylesheet" href="../style/animations.css" />
+    <!-- style that's only used in shape page -->
+    <link rel="stylesheet" href="../style/shapes.css" />
 
-  <!-- ========== CSS ========== -->
-  <!-- body, html, *, fonts... -->
-  <link rel="stylesheet" href="../style/base.css" />
-  <!-- navbar style -->
-  <link rel="stylesheet" href="../style/navbar.css" />
-  <!-- animations that are toggled through js -->
-  <link rel="stylesheet" href="../style/animations.css" />
-  <!-- style that's only used in shape page -->
-  <link rel="stylesheet" href="../style/shapes.css" />
+    <!-- ========== JS ========== -->
+    <!-- all pages shared JavaScript -->
+    <script src="../js/shared.js" defer></script>
+    <!-- p5js -->
+    <script src="../js/p5/p5.min.js"></script>
+    <!-- helper functions -->
+    <script src="../js/helpers/coordinateTransformer.js"></script>
+    <script src="../js/helpers/canvasManager.js" defer></script>
+    <!-- rose drawing -->
+    <script src="../js/drawings/rose.js" defer></script>
+    <!-- sketch -->
+    <script src="../js/sketch.js" defer></script>
 
-  <!-- ========== JS ========== -->
-  <!-- all pages shared JavaScript -->
-  <script src="../js/shared.js" defer></script>
-  <!-- p5js -->
-  <script src="../js/p5/p5.min.js"></script>
-  <!-- helper functions -->
-  <script src="../js/helpers/coordinateTransformer.js"></script>
-  <script src="../js/helpers/canvasManager.js" defer></script>
-  <!-- rose drawing -->
-  <script src="../js/drawings/rose.js" defer></script>
-  <!-- sketch -->
-  <script src="../js/sketch.js" defer></script>
+    <title>Static Circle</title>
+  </head>
 
-  <title>Static Circle</title>
-</head>
+  <body>
+    <!-- nav container so navbar is hideable -->
+    <div id="nav-container">
+      <!-- title of shape -->
+      <div id="shape-title">Maurer Rose</div>
 
-<body>
-  <!-- nav container so navbar is hideable -->
-  <div id="nav-container">
-    <!-- title of shape -->
-    <div id="shape-title">Maurer Rose</div>
+      <!-- navigation bar -->
+      <nav id="nav-bar">
+        <!-- navigation bar items -->
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="circle.html">Circle</a></li>
+          <li><a href="heart.html">Heart</a></li>
+          <li><a href="spiral.html">Spiral</a></li>
+          <li id="current-page"><a href="rose.html">Maurer Rose</a></li>
 
-    <!-- navigation bar -->
-    <nav id="nav-bar">
-      <!-- navigation bar items -->
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="circle.html">Circle</a></li>
-        <li><a href="heart.html">Heart</a></li>
-        <li><a href="spiral.html">Spiral</a></li>
-        <li id="current-page"><a href="rose.html">Maurer Rose</a></li>
-
-        <!-- to be continued special element -->
-        <li id="last-navbar-item">And more to come...</li>
-      </ul>
-      <hr />
-    </nav>
-
-  </div>
-
-  <!-- main - contains shape hint and shape info as well as canvas placed by p5.js libraries -->
-  <main>
-    <!-- shape information container -->
-    <div id="shape-info-container">
+          <!-- to be continued special element -->
+          <li id="last-navbar-item">And more to come...</li>
+        </ul>
+        <hr />
+      </nav>
     </div>
-  </main>
-</body>
 
+    <!-- main - contains shape hint and shape info as well as canvas placed by p5.js libraries -->
+    <main>
+      <!-- shape information container -->
+      <div id="shape-info-container">
+        <!-- allows user to change circle color -->
+        <div class="shape-info-element">
+          <button id="new-color-button">New Outline Color</button>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
