rose on top of lines

--- a/shapes/rose.html
+++ b/shapes/rose.html
@@ -60,6 +60,14 @@
         <div class="shape-info-element">
           <button id="new-color-button">New Outline Color</button>
         </div>
+        <div class="shape-info-element">
+          Value of d - degree # at which the lines turn:
+          <input id="rose-d-value" type="number" min="0" max="360" />
+        </div>
+        <div class="shape-info-element">
+          Value of n - The rose has n petals if n is odd, and 2n petals if n is
+          even: <input id="rose-n-value" type="number" min="0" />
+        </div>
       </div>
     </main>
   </body>
