--- a/shapes/rose.html
+++ b/shapes/rose.html
@@ -61,12 +61,15 @@
           <button id="new-color-button">New Outline Color</button>
         </div>
         <div class="shape-info-element">
-          Value of d - degree # at which the lines turn:
-          <input id="rose-d-value" type="number" min="0" max="360" />
+          Value of n: <input id="rose-n-value" type="number" min="0" />
+          <div class="s-text">
+            The rose has n petals if n is odd, and 2n petals if n is even
+          </div>
         </div>
         <div class="shape-info-element">
-          Value of n - The rose has n petals if n is odd, and 2n petals if n is
-          even: <input id="rose-n-value" type="number" min="0" />
+          Value of d:
+          <input id="rose-d-value" type="number" min="0" max="360" />
+          <div class="s-text">degree # at which the lines turn</div>
         </div>
       </div>
     </main>
