update of values is more sleek

--- a/shapes/rose.html
+++ b/shapes/rose.html
@@ -61,14 +61,17 @@
           <button id="new-color-button">New Outline Color</button>
         </div>
         <div class="shape-info-element">
-          Value of n: <input id="rose-n-value" type="number" min="0" />
+          Value of n: 
+          <input id="rose-n-slider" type="range" min="0" max="100" />
+          <input id="rose-n-value" type="number" min="0" max="100" />
           <div class="s-text">
             The rose has n petals if n is odd, and 2n petals if n is even
           </div>
         </div>
         <div class="shape-info-element">
           Value of d:
-          <input id="rose-d-value" type="number" min="0" max="360" />
+          <input id="rose-d-slider" type="range" min="0" max="360" />
+          <input id="rose-d-value" type="number" min="0" max="3600" />
           <div class="s-text">degree # at which the lines turn</div>
         </div>
       </div>
