add link to wikipedia

--- a/shapes/rose.html
+++ b/shapes/rose.html
@@ -61,7 +61,7 @@
           <button id="new-color-button">New Outline Color</button>
         </div>
         <div class="shape-info-element">
-          Value of n: 
+          Value of n:
           <input id="rose-n-slider" type="range" min="0" max="20" />
           <input id="rose-n-value" type="number" min="0" max="20" />
           <div class="s-text">
@@ -73,6 +73,16 @@
           <input id="rose-d-slider" type="range" min="0" max="360" />
           <input id="rose-d-value" type="number" min="0" max="360" />
           <div class="s-text">degree # at which the lines turn</div>
+        </div>
+        <div class="shape-info-element s-text">
+          In
+          <a
+            class="link"
+            target="_blank"
+            href="https://en.wikipedia.org/wiki/Maurer_rose"
+            >this wikipedia article</a
+          >
+          you can find inspiration interesting n's and d's to try.
         </div>
       </div>
     </main>
